--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
         <div class="intro">
             <div class="intro-text">
                 <h2>WELCOME</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Minima optio repudiandae dolorum ipsam doloremque est
-                    assumenda eos reiciendis suscipit molestiae.</p>
+                <marquee scrollamount="5" behavior="alternate" hspace="200px"direction="right">Welcome To Bikers Community</marquee>
+                <p>We're thrilled to have you join our biking community and embark on your journey to mastery with us.
+                    Whether you're a beginner looking to learn the basics or a seasoned rider seeking to refine your
+                    skills,
+                    we have tailored learning experiences just for you.
+                    Get ready to explore new horizons, conquer challenging terrains,
+                    and experience the joy of cycling to the fullest.
+                    Let's saddle up and ride towards adventure together!</p>
             </div>
         </div>
         <h3>Our Plans</h3>
@@ -43,12 +48,11 @@
                         <h2>Beginner Basic Plan</h2>
                         <h4>$150 /month</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, temporibus dolor ex labore
-                            iusto
-                            inventore optio excepturi, et explicabo possimus aliquid corporis adipisci vero placeat!
-                            Dignissimos nisi a omnis tempore ipsum, similique mollitia corrupti porro doloremque. Dicta
-                            totam
-                            nisi rem?</p>
+                        <p>The Beginner Basic Plan is designed for individuals who are new to cycling or have limited
+                            experience with biking.
+                            This plan provides foundational knowledge and skills to help beginners feel confident and
+                            comfortable on their bikes.</p><br><br>
+
                         <span class="dec"></span>
                         <span class="dec"></span>
                         <button>Enroll Now </button>
@@ -66,12 +70,8 @@
                         <h2>Advanced Plan</h2>
                         <h4>$200 /month</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, temporibus dolor ex labore
-                            iusto
-                            inventore optio excepturi, et explicabo possimus aliquid corporis adipisci vero placeat!
-                            Dignissimos nisi a omnis tempore ipsum, similique mollitia corrupti porro doloremque. Dicta
-                            totam
-                            nisi rem?</p>
+                        <p>The Advanced Plan is tailored for experienced cyclists looking to
+                            enhance their skills and take their riding to the next level. </p><br><br><br><br><br>
                         <span class="dec"></span>
                         <span class="dec"></span>
                         <button>Enroll Now </button>
@@ -89,12 +89,10 @@
                         <h2>Expert</h2>
                         <h4>$300 /month</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, temporibus dolor ex labore
-                            iusto
-                            inventore optio excepturi, et explicabo possimus aliquid corporis adipisci vero placeat!
-                            Dignissimos nisi a omnis tempore ipsum, similique mollitia corrupti porro doloremque. Dicta
-                            totam
-                            nisi rem?</p>
+                        <p>
+                            The Expert Plan likely offers comprehensive and advanced training services for individuals
+                            looking to refine their biking skills or delve deeper into specific aspects of biking</p>
+                        <br><br><br>
 
                         <button>Enroll Now </button>
                     </div>
@@ -112,12 +110,8 @@
                 <h3>Classes start soon Enroll Now</h3>
                 <h4>$200</h4>
 
-                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam sequi culpa laboriosam maxime
-                    nesciunt. Adipisci, vitae! Suscipit illum
-                    ex ad modi animi quasi dolore praesentium, porro facilis vero. Possimus ut hic fugiat similique
-                    consequatur accusamus voluptatum est quibusdam! Quis quaerat officiis quos repellendus ipsum dolorem
-                    veniam fuga ad adipisci cumque?
-                </P>
+                <P>The All Terrains-Training program likely focuses on providing participants
+                    with comprehensive skills and knowledge necessary for tackling diverse terrains and conditions. </P>
 
                 <span class="dec1"></span>
                 <span class="dec2"></span>
@@ -140,8 +134,8 @@
             </div>
             <div class="contacts">
                 <h3>Contacts</h3>
-                <p>070000000</p>
-                <p>bikers@gmail.com</p>
+                <p>0706387759</p>
+                <p>nuabutoleon@gmail.com</p>
 
             </div>
             <div class="Plans">
