--- a/services.html
+++ b/services.html
@@ -41,11 +41,8 @@
                 <h3>Classes start soon Enroll Now</h3>
                 <h4>$100</h4>
 
-                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam sequi culpa laboriosam maxime
-                    nesciunt. Adipisci, vitae! Suscipit illum
-                    ex ad modi animi quasi dolore praesentium, porro facilis vero. Possimus ut hic fugiat similique
-                    consequatur accusamus voluptatum est quibusdam! Quis quaerat officiis quos repellendus ipsum dolorem
-                    veniam fuga ad adipisci cumque?
+                <P>Tarmac-Training, offered on these bike website, likely focuses on enhancing participants
+                     road biking skills and knowledge
                 </P>
                 <h5>You can also consider Our Monthly Plans</h5>
 
@@ -63,11 +60,8 @@
                 <h2>All-Terrain-Training</h2>
                 <h3>Classes start soon Enroll Now</h3>
                 <h4>$200</h4>
-                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam sequi culpa laboriosam maxime
-                    nesciunt. Adipisci, vitae! Suscipit illum
-                    ex ad modi animi quasi dolore praesentium, porro facilis vero. Possimus ut hic fugiat similique
-                    consequatur accusamus voluptatum est quibusdam! Quis quaerat officiis quos repellendus ipsum dolorem
-                    veniam fuga ad adipisci cumque?
+                <P>The All Terrains-Training program likely focuses on providing participants
+                    with comprehensive skills and knowledge necessary for tackling diverse terrains and conditions.
                 </P>
                 <h5>You can also consider Our Monthly Plans</h5>
 
@@ -90,11 +84,10 @@
                 <h2>Off-Road-Training</h2>
                 <h3>Classes start soon Enroll Now</h3>
                 <h4>$150</h4>
-                <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam sequi culpa laboriosam maxime
-                    nesciunt. Adipisci, vitae! Suscipit illum
-                    ex ad modi animi quasi dolore praesentium, porro facilis vero. Possimus ut hic fugiat similique
-                    consequatur accusamus voluptatum est quibusdam! Quis quaerat officiis quos repellendus ipsum dolorem
-                    veniam fuga ad adipisci cumque?
+                <P>The Off-Road-Training program offered likely focuses specifically on
+                    preparing participants for off-road biking adventures. Here's a brief overview:
+
+
                 </P>
                 <h5>You can also consider Our Monthly Plans</h5>
 
@@ -117,12 +110,11 @@
                         <h2>Beginner Basic Plan</h2>
                         <h4>$150 /month</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, temporibus dolor ex labore
-                            iusto
-                            inventore optio excepturi, et explicabo possimus aliquid corporis adipisci vero placeat!
-                            Dignissimos nisi a omnis tempore ipsum, similique mollitia corrupti porro doloremque. Dicta
-                            totam
-                            nisi rem?</p>
+                        <p>The Beginner Basic Plan is designed for individuals who are new to cycling or have limited
+                            experience with biking.
+                            This plan provides foundational knowledge and skills to help beginners feel confident and
+                            comfortable on their bikes</p><br><br>
+
                         <span class="dec"></span>
                         <span class="dec"></span>
                         <button>Enroll Now </button>
@@ -140,12 +132,8 @@
                         <h2>Advanced Plan</h2>
                         <h4>$200 /month</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, temporibus dolor ex labore
-                            iusto
-                            inventore optio excepturi, et explicabo possimus aliquid corporis adipisci vero placeat!
-                            Dignissimos nisi a omnis tempore ipsum, similique mollitia corrupti porro doloremque. Dicta
-                            totam
-                            nisi rem?</p>
+                        <p>The Advanced Plan is tailored for experienced cyclists looking to
+                            enhance their skills and take their riding to the next level.</p><br><br><br><br><br
                         <span class="dec"></span>
                         <span class="dec"></span>
                         <button>Enroll Now </button>
@@ -163,12 +151,9 @@
                         <h2>Expert</h2>
                         <h4>$300 /month</h4>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, temporibus dolor ex labore
-                            iusto
-                            inventore optio excepturi, et explicabo possimus aliquid corporis adipisci vero placeat!
-                            Dignissimos nisi a omnis tempore ipsum, similique mollitia corrupti porro doloremque. Dicta
-                            totam
-                            nisi rem?</p>
+                        <p>The Expert Plan likely offers comprehensive and advanced training services for individuals
+                            looking to refine their biking skills or delve deeper into specific aspects of biking</p><br><br><br>
+
 
                         <button>Enroll Now </button>
                     </div>
