--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
             </div>
             <a href="./index.html">Home </a>
             <a href="#">Gallery</a>
-            <a href="./services.html">Service</a>
-            <a href="#">About us </a>
-            <a href="#">Contacts </a>
+            <a href="./service.html">Service</a>
+            <a href="./about.html">About us </a>
+            <a href="./contact.html">Contacts </a>
         </nav>
     </div>
     <div class="cont">
