--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>services</title>
-    <link rel="stylesheet" href="./services.css">
+    <link rel="stylesheet" href="./service.css">
 </head>
 
 <body>
@@ -18,8 +18,8 @@
             <a href="./index.html">Home </a>
             <a href="./gallery.html">Gallery</a>
             <a href="#">Service</a>
-            <a href="#">About us </a>
-            <a href="#">Contacts </a>
+            <a href="./about.html">About us </a>
+            <a href="./contact.html">Contacts </a>
         </nav>
     </div>
     <div class="main-cont">
